<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorite"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="Add as favorite"
        app:showAsAction="always" />

</menu>